[gd_scene load_steps=41 format=3 uid="uid://cock7nvcnmq6e"]

[ext_resource type="Script" path="res://Scenes/enemys/Cross_Bow_Soldier/cross_bow_soldier.gd" id="1_iog6a"]
[ext_resource type="Texture2D" uid="uid://jxgvwj664oqb" path="res://Art/Enemies/Crossbowman/Attack/CrossBowMan Attack-Sheet.png" id="2_2hoqh"]
[ext_resource type="PackedScene" uid="uid://ew71k15wafgy" path="res://Scenes/enemys/Ammo/arrow.tscn" id="2_42b2p"]
[ext_resource type="Texture2D" uid="uid://c1bg0ih2h8uev" path="res://Art/Enemies/Crossbowman/Death (No Gore)/CrossBowMan Death No Gore-Sheet.png" id="3_xg74o"]
[ext_resource type="Texture2D" uid="uid://cpt1mif243ecf" path="res://Art/Enemies/Crossbowman/CrossBowMan.png" id="4_gudm3"]
[ext_resource type="Texture2D" uid="uid://bcc8aijq65c86" path="res://Art/Enemies/Crossbowman/Walk/CrossBowman Walk-Sheet.png" id="5_epnt2"]
[ext_resource type="PackedScene" uid="uid://cm28ftmarv0qi" path="res://VFX/collection_expolsion/damage.tscn" id="7_ulhmo"]
[ext_resource type="AudioStream" uid="uid://dq0ua7wk8wy6r" path="res://Audio/mixkit-impact-of-a-strong-punch-2155.mp3" id="8_kpk7w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_if7mi"]
atlas = ExtResource("2_2hoqh")
region = Rect2(0, 0, 448, 233)

[sub_resource type="AtlasTexture" id="AtlasTexture_j147q"]
atlas = ExtResource("2_2hoqh")
region = Rect2(448, 0, 448, 233)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlv25"]
atlas = ExtResource("2_2hoqh")
region = Rect2(896, 0, 448, 233)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0l47"]
atlas = ExtResource("2_2hoqh")
region = Rect2(1344, 0, 448, 233)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwyk3"]
atlas = ExtResource("2_2hoqh")
region = Rect2(1792, 0, 448, 233)

[sub_resource type="AtlasTexture" id="AtlasTexture_27jhj"]
atlas = ExtResource("2_2hoqh")
region = Rect2(2240, 0, 448, 233)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsgmj"]
atlas = ExtResource("2_2hoqh")
region = Rect2(2688, 0, 448, 233)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2lwb"]
atlas = ExtResource("2_2hoqh")
region = Rect2(3136, 0, 448, 233)

[sub_resource type="AtlasTexture" id="AtlasTexture_obhdi"]
atlas = ExtResource("3_xg74o")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfrbb"]
atlas = ExtResource("3_xg74o")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcu4c"]
atlas = ExtResource("3_xg74o")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgbo2"]
atlas = ExtResource("3_xg74o")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqkm8"]
atlas = ExtResource("3_xg74o")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_awtrn"]
atlas = ExtResource("3_xg74o")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3u17"]
atlas = ExtResource("3_xg74o")
region = Rect2(2688, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_e764a"]
atlas = ExtResource("3_xg74o")
region = Rect2(3136, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_uou4g"]
atlas = ExtResource("3_xg74o")
region = Rect2(3584, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky7ln"]
atlas = ExtResource("5_epnt2")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxku3"]
atlas = ExtResource("5_epnt2")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_i32pm"]
atlas = ExtResource("5_epnt2")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_3snbg"]
atlas = ExtResource("5_epnt2")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m7qg"]
atlas = ExtResource("5_epnt2")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_3no3d"]
atlas = ExtResource("5_epnt2")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn42s"]
atlas = ExtResource("5_epnt2")
region = Rect2(2688, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyoy2"]
atlas = ExtResource("5_epnt2")
region = Rect2(3136, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqbru"]
atlas = ExtResource("5_epnt2")
region = Rect2(3584, 0, 448, 448)

[sub_resource type="SpriteFrames" id="SpriteFrames_mmjok"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_if7mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j147q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlv25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0l47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwyk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27jhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsgmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2lwb")
}],
"loop": false,
"name": &"attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_obhdi")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_kfrbb")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_bcu4c")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_cgbo2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_jqkm8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_awtrn")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_e3u17")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_e764a")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_uou4g")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_gudm3")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_ky7ln")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xxku3")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_i32pm")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_3snbg")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_8m7qg")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_3no3d")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xn42s")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_lyoy2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_gqbru")
}],
"loop": false,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_a3j8c"]
radius = 48.2222

[sub_resource type="CircleShape2D" id="CircleShape2D_24c5g"]
radius = 882.882

[sub_resource type="CircleShape2D" id="CircleShape2D_vopl7"]
radius = 574.353

[sub_resource type="CircleShape2D" id="CircleShape2D_p6jd8"]
radius = 3116.69

[sub_resource type="CircleShape2D" id="CircleShape2D_ovjlw"]
radius = 122.726

[node name="Cross_Bow_Soldier" type="CharacterBody2D"]
z_index = 1
scale = Vector2(0.18, 0.18)
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_iog6a")
ammo = ExtResource("2_42b2p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 4
position = Vector2(72.2222, -144.444)
sprite_frames = SubResource("SpriteFrames_mmjok")
animation = &"attacking"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(83.3333, -144.444)
shape = SubResource("CircleShape2D_a3j8c")
debug_color = Color(0.969041, 0, 0.463952, 0.42)

[node name="Shooting_Flee" type="Node2D" parent="."]
position = Vector2(83.3333, -144.444)

[node name="Area2D" type="Area2D" parent="Shooting_Flee"]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_Flee/Area2D"]
z_index = 1
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_24c5g")
debug_color = Color(0.975196, 0.905046, 0, 0.42)

[node name="danger_close" type="Area2D" parent="Shooting_Flee"]
modulate = Color(1, 0, 0.156863, 1)
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_Flee/danger_close"]
z_index = 1
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_vopl7")
debug_color = Color(0.690311, 0.497921, 0, 0.42)

[node name="chase" type="Area2D" parent="Shooting_Flee"]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_Flee/chase"]
z_index = 1
shape = SubResource("CircleShape2D_p6jd8")
debug_color = Color(0.415667, 0.516359, 0.835609, 0.42)

[node name="NAV" type="Node2D" parent="."]
position = Vector2(83.3333, -144.444)

[node name="RayCast2D" type="RayCast2D" parent="NAV"]
z_index = 1
collision_mask = 15

[node name="Fire_Timer" type="Timer" parent="NAV"]
wait_time = 1.2

[node name="cross_e_hit" type="Area2D" parent="."]
z_index = 1
position = Vector2(83.3333, -144.444)

[node name="CollisionShape2D" type="CollisionShape2D" parent="cross_e_hit"]
z_index = 1
shape = SubResource("CircleShape2D_ovjlw")
debug_color = Color(0.941893, 9.2411e-06, 0.60857, 0.42)

[node name="CPUParticles2D" parent="." instance=ExtResource("7_ulhmo")]
position = Vector2(83.3333, -144.444)
scale = Vector2(5, 5)

[node name="hit_by _sword" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_kpk7w")

[connection signal="area_exited" from="Shooting_Flee/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Shooting_Flee/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Shooting_Flee/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Shooting_Flee/danger_close" to="." method="_on_danger_close_body_entered"]
[connection signal="body_exited" from="Shooting_Flee/danger_close" to="." method="_on_danger_close_body_exited"]
[connection signal="body_entered" from="Shooting_Flee/chase" to="." method="_on_chase_body_entered"]
[connection signal="body_exited" from="Shooting_Flee/chase" to="." method="_on_chase_body_exited"]
[connection signal="timeout" from="NAV/Fire_Timer" to="." method="_on_fire_timer_timeout"]
[connection signal="area_entered" from="cross_e_hit" to="." method="_on_cross_e_hit_area_entered"]
[connection signal="area_exited" from="cross_e_hit" to="." method="_on_cross_e_hit_area_exited"]
